# fp-data-toolbox

./: .gitignore  DONE-fp-data-toolbox.md  DONE.md  MANIFEST.in  Pipfile  README.md  TODO-fp-data-toolbox.md  TODO.md  Untitled Diagram.drawio  dev_env_setup.bat  pyproject.toml  pythonversion.txt  requirements.txt  setup.cfg  setup.py
adhoc/: Marissa_Tracker_sketch-v0.01.xlsx
docs/diagrams/: data_vault_design.md  drawio-template.drawio  modern_data_stack.md
docs/diagrams/templates/: gcp-data-model-complex-template.drawio  gcp-data-model-template.drawio  mermaid_data_flow.md
docs/ext-references/: README.md
docs/ext-references/gcp_links/: README.md
docs/ext_references/Kimball-Data-Modeling/: README.md
docs/guidelines/: README.md
docs/notes/: explore.md  marissa_call_list_model_notes.md  philosophical.md  project_structure.md  resources.md  vs_code_snippets.md
docs/notes/journal/: daily-journal-2022-09-24.md
fp_data_toolbox/: _scratch_tests.py  _xgboost_explore_test.py  clean.py  eda.py  environment.py  excel_auto_eda.py  excel_to_auto_eda.py  extract.py  fcal.py  feature_creation.py  file_handling.py  gbq_connection.py  package_handling.py  predictions.py  scheduling.py  ssms_connection.py  transform.py  validation.py  xl_handling.py
fp_data_toolbox/config/pandas-profiling-config/: scf_pd_profile_config.yaml
keymaps/fred_redox/: readme.md
models/: pires_home_financial_model.xlsm
models/example/: _scratch.ipynb  example.sql
models/personal_finance_model/: personal_finance_model.py  personal_finance_model.xlsm  personal_finance_model_main.ipynb  xl_handler.py
mtg-etl/: core.py
mtg-etl/archive_deck_list/: archive_deck_list-nb.ipynb
mtg-etl/scrython_bulk_data_etl/: scryfall_metadata.json  scrython_bulk_data_etl-nb.ipynb
mtg-etl/sort_wish_list/: sort_wish_list-nb.ipynb  sort_wish_list_prototype.xlsx
mtg-etl/tests/: test_main.py
mtg-etl/update_collection/: update_collection-nb.ipynb
mtg-etl/wants_order_proc/: wants_order_proc-nb.ipynb
notebooks/: _scratch.ipynb
notebooks/development/: home_financial_output.csv  home_financial_output.parquet  pires_delgado_financial_model-dev.py
notebooks/explore/: _scratch.ipynb  real_estate_dummy_data.ipynb  xgboost_explore_kaggle.ipynb
notebooks/modeling/: xgboost_kaggle.ipynb
notebooks/templates/: df_unemp_states-20230307.parquet  fp-analytics-template-3.1.ipynb  xgboost_timeseries_modeling_template.ipynb
prompts/chatgpt/: prompt_xl_to_py_etl.md
prompts/chatgpt/saved_conversations/: prompt_personal_finance_model.md
prompts/llm_prompting/.templates/: _initial_prompt_templates.md
prompts/llm_prompting/saved_conversations/: pipenv_to_poetry_transition.md  py_script_print_folder_structure_in_markdown.md
queries/: jql_queries.md
queries/chatgpt/: _prompt_template.md  prompt_py_to_xl.md  prompt_template.md  prompt_xl_to_py_etl.md
scripts/batch/: 00-dev_env_setup.bat  _master_script.bat  _personal_pip_install_script.bat  _pipenv_proj_setup_example.bat  _pipenv_proj_setup_template.bat  dev_env_setup.bat  env_file_sync.bat  fp_data_toolbox-update_str.bat  gcloud_sdk_login.bat  git-pre-push-hook-script.bat  master_script.bat
scripts/batch/git_cli/: README.md
scripts/batch/project_push_sync/: project_sync_to_onedrive.bat
scripts/batch/templates/: robocopy_template.bat
scripts/python/: _master_orchestration_script.py  _master_script.py  _scratch.py  excel_to_auto_eda.py  master_script.py
scripts/sql-bigquery/: abstracted-forecasting.sql
scripts/sql/bigquery/: 1-create_table_proc_example.sql  2-create_view_example.sql  3_create_proc_example.sql  add_sub_calendar_partition.sql  calc_wmape_example.sql  ensemble_forecast.sql  window_function_examples.sql
src/fp-data-toolbox/: time.py
src/fp_data_toolbox/: clean.py  eda.py  extract.py  file_handling.py  notifier.py  project_path.py  util.py  validation.py
tests/test_fp_data_toolbox/: test_template.py
toolbox/: eda.py  fcal.py  gbq_connection.py  notifier.py
tools/in_development/: test_data_wkbk.xlsm
(+3 files in other folders)
