[tool.poetry]
name = "fp-data-toolbox"
version = "0.1.55"
description = "personal toolbox for data science"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fp_data_toolbox"}]


[tool.poetry.dependencies]
python = ">=3.9,<3.11"
python-dotenv = "*"
pyperclip = "*"
jupyter-helpers = "*"
win10toast = "*"
pyautogui = "*"
pandas = "*"
build = "*"
numpy = "^1.23.5"
numpy-financial = "*"
openpyxl = "*"
matplotlib = "*"
seaborn = "*"
plotly = "*"
lux = "*"
lux-api = "*"
missingno = "*"
ydata-profiling = "*"
# pandas-profiling = "*"
dtale = "*"
dataprep = "*"
pyarrow = "*"
jaro-winkler = "*"
xgboost = "*"
scikit-learn = "*"
fredapi = "*"
# kaleido = "0.2.1"
# scipy = "^1.10.1"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-mock = "*"
faker = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "conda-forge"
url = "https://conda.anaconda.org/conda-forge/"

