[tool.poetry]
name = "fp-data-toolbox"
version = "0.1.61"
description = "personal toolbox for data analytics"
authors = ["Fred Pires <fredapires@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fp_data_toolbox"}]


[tool.poetry.dependencies]
python = ">=3.9,<3.11"
python-dotenv = "*"
pyperclip = "*"
jupyter-helpers = "*"
win10toast = "*"
pyautogui = "*"
pandas = "*"
build = "*"
numpy = "^1.23.5"
numpy-financial = "*"
xlwings = "^0.30.4"
openpyxl = "*"
matplotlib = "*"
seaborn = "*"
plotly = "*"
lux = "*"
lux-api = "*"
missingno = "*"
ydata-profiling = "*"
# pandas-profiling = "*"
dtale = "*"
dataprep = "*"
pyarrow = "*"
jaro-winkler = "*"
xgboost = "*"
scikit-learn = "*"
fredapi = "*"
# kaleido = "0.2.1"
# scipy = "^1.10.1"


[tool.poetry.dev-dependencies]
pytest = "*"
pytest-mock = "*"
faker = "*"
black = "*"
flake8 = "*"


[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "conda-forge"
url = "https://conda.anaconda.org/conda-forge/"


[tool.poetry.scripts]
your_script_name = "fp-data-toolbox:main"


[tool.poetry.plugins."poetry-dynamic-versioning"]
version-scheme = "calver"
