[metadata]
name = fp_data_toolbox
version = 0.1.19
description = Personal data toolbox to be used in my personal projects

author = Fred Pires
author_email = fredapires@gmail.com
license = MIT
platform = any
long_description = file: README.md, CHANGELOG.md
url=https://github.com/fredapires/fp_data_toolbox
classifiers=
    Development Status :: 1 - Planning
    Natural Language :: English
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.7
zip_safe = false
include_package_data = true

package_dir =
    =src
packages = find:

install_requires =
    numpy
    pandas
    pandas_profiling
    matplotlib
    seaborn
    # popmon
    # dataprep
    # dtale


[options.packages.find]
where=src
